Utilize getFirst