@@ -12,10 +12,10 @@ public interface VoteTestData extends VoteChoiceTestData {
 
 	EncryptedVote TO_VOTE = new EncryptedVote(CONTEXT_0,
 			REENCRYPTED_CHOICE_MAP.get(VoteChoice.I_BEATS_J),
-			REENCRYPTED_VOTE_CAPABILITIES_WITH_KEY_E.get(0));
+			REENCRYPTED_VOTE_CAPABILITIES_WITH_KEY_E.getFirst());
 
 	EncryptedVote FROM_VOTE = new EncryptedVote(CONTEXT_0,
 			CIPHERTEXT_LIST.get(VoteChoice.I_BEATS_J.ordinal()),
-			ENCRYPTED_SIGNED_VOTE_CAPABILITIES.get(0));
+			ENCRYPTED_SIGNED_VOTE_CAPABILITIES.getFirst());
 
 }
